# torch_script_executor

./: CMakeLists.txt  README.md  main.cpp  torch_script_executor.hpp
